Aggiunte foto, nomi e professioni

--- a/index.html
+++ b/index.html
@@ -16,13 +16,37 @@
     </header>
     <main>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem ipsum rem molestiae nisi, autem placeat animi voluptas quae eaque quaerat tempore veniam non, sed provident facilis sunt, dolorum nemo itaque.</p>
-        <section class="container">
-            <div class="box clearfix"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+        <section class="container clearfix">
+            <div class="box clearfix">
+                <img src="img/male1.png" alt="Marco">
+                <h3>Marco Bianchi</h3>
+                <small>Designer</small>
+            </div>
+            <div class="box clearfix">
+                <img src="img/female1.png" alt="Laura">
+                <h3>Laura Rossi</h3>
+                <small>Front-end developer</small>
+            </div>
+            <div class="box clearfix">
+                <img src="img/male2.png" alt="Giorgio">
+                <h3>Giorgio Verdi</h3>
+                <small>Back-end developer</small>
+            </div>
+            <div class="box clearfix">
+                <img src="img/female2.png" alt="Marta">
+                <h3>Marta Ipsum</h3>
+                <small>SEO specialist</small>
+            </div>
+            <div class="box clearfix">
+                <img src="img/male3.png" alt="Roberto">
+                <h3>Roberto Lorem</h3>
+                <small>Project Manager</small>
+            </div>
+            <div class="box clearfix">
+                <img src="img/female3.png" alt="Daniela">
+                <h3>Daniela Amet</h3>
+                <small>Analyst</small>
+            </div>
         </section>
     </main>
 </body>
