--- a/index.html
+++ b/index.html
@@ -21,31 +21,37 @@
                 <img src="img/male1.png" alt="Marco">
                 <h3>Marco Bianchi</h3>
                 <small>Designer</small>
+                <a href="mailto:someone@yoursite.com">mariobianchi@team.com</a>
             </div>
             <div class="box clearfix">
                 <img src="img/female1.png" alt="Laura">
                 <h3>Laura Rossi</h3>
                 <small>Front-end developer</small>
+                <a href="mailto:someone@yoursite.com">laurarossi@team.com</a>
             </div>
             <div class="box clearfix">
                 <img src="img/male2.png" alt="Giorgio">
                 <h3>Giorgio Verdi</h3>
                 <small>Back-end developer</small>
+                <a href="mailto:someone@yoursite.com">giorgioverdi@team.com</a>
             </div>
             <div class="box clearfix">
                 <img src="img/female2.png" alt="Marta">
                 <h3>Marta Ipsum</h3>
                 <small>SEO specialist</small>
+                <a href="mailto:someone@yoursite.com">martaipsum@team.com</a>
             </div>
             <div class="box clearfix">
                 <img src="img/male3.png" alt="Roberto">
                 <h3>Roberto Lorem</h3>
                 <small>Project Manager</small>
+                <a href="mailto:someone@yoursite.com">robertolorem@team.com</a>
             </div>
             <div class="box clearfix">
                 <img src="img/female3.png" alt="Daniela">
                 <h3>Daniela Amet</h3>
                 <small>Analyst</small>
+                <a href="mailto:someone@yoursite.com">danielaamet@team.com</a>
             </div>
         </section>
     </main>
